@@ -1,11 +1,13 @@
 package modist.artoftnt.core.explosion.manager;
 
+import modist.artoftnt.common.sound.SoundEventRegistry;
 import net.minecraft.core.particles.ParticleOptions;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundEvents;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -17,7 +19,11 @@ public class ExplosionResources<T> {
     public static final ExplosionResources<SoundEvent> SOUNDS = new ExplosionResources<>();
     public static final ExplosionResources<SoundEvent> TNT_SOUNDS = new ExplosionResources<>();
 
-    public Optional<T> get(int value){
+    public Optional<T> get(int value, int tier){
+        if(value==0){
+            return resources.get(tier)==null ? Optional.empty() : Optional.of(resources.get(tier));
+        }
+        value += 3;
         if(value < 0 || value >= resources.size() || resources.get(value)==null){
             return Optional.empty();
         }
@@ -26,13 +32,17 @@ public class ExplosionResources<T> {
 
     @SafeVarargs
     private void register(T... values){
-        resources.addAll(List.of(values));
+        resources.addAll(Arrays.asList(values));
     }
 
     static {
-        PARTICLES.register(ParticleTypes.BUBBLE, ParticleTypes.EXPLOSION_EMITTER, ParticleTypes.EXPLOSION, ParticleTypes.ANGRY_VILLAGER);
-        TNT_PARTICLES.register(ParticleTypes.ASH, ParticleTypes.SMOKE, ParticleTypes.EXPLOSION, ParticleTypes.ANGRY_VILLAGER);
-        SOUNDS.register(SoundEvents.BUBBLE_COLUMN_BUBBLE_POP, SoundEvents.GENERIC_EXPLODE, SoundEvents.DRAGON_FIREBALL_EXPLODE, SoundEvents.WITHER_DEATH);
-        TNT_SOUNDS.register(SoundEvents.EGG_THROW, SoundEvents.TNT_PRIMED, SoundEvents.VILLAGER_NO, SoundEvents.CHICKEN_DEATH);
+        PARTICLES.register(ParticleTypes.BUBBLE_POP, ParticleTypes.EXPLOSION, ParticleTypes.EXPLOSION_EMITTER, ParticleTypes.ANGRY_VILLAGER);
+        TNT_PARTICLES.register(null, null, null, null);
+        TNT_PARTICLES.register(ParticleTypes.BUBBLE, ParticleTypes.COMPOSTER, ParticleTypes.FLAME, ParticleTypes.SNOWFLAKE);
+        SOUNDS.register(SoundEvents.BUBBLE_COLUMN_UPWARDS_INSIDE, SoundEvents.GENERIC_EXPLODE, SoundEvents.DRAGON_FIREBALL_EXPLODE, SoundEvents.WITHER_DEATH);
+        for(int i=0; i<8; i++){
+            SOUNDS.register(SoundEventRegistry.TNT_SOUND[i].get());
+        }
+        TNT_SOUNDS.register(null, SoundEvents.TNT_PRIMED, SoundEvents.ANVIL_PLACE, SoundEvents.GHAST_DEATH);
     }
 }
